apps/doko/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: doko
  namespace: doko
spec:
  hostnames:
    - doko.f9k.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: doko
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
